Sat May 21 14:25:38 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_ec.c: rename PKey::EC#private_key? and
	  #public_key? to #private? and #public? for consistency with other
	  PKey types. Old names remain as alias.  [ruby-core:45541] [Bug #6567]

	* test/openssl/test_pkey_ec.rb (test_check_key): check private? and
	  public? works correctly.

Sat May 21 12:40:36 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/lib/openssl/buffering.rb (read_nonblock, readpartial):
	  Remove impossible EOFError raise. Patch by Zach Anker
	  <zanker@squareup.com>.  [GH ruby/openssl#23]

Sat May 21 11:18:42 2016  Evgeni Golov  <evgeni@golov.de>

	* lib/ipaddr.rb: [DOC] fix documentation of IN6MASK to mention
	  IPv6.  [Fix GH-1349]

Sat May 21 11:12:53 2016  Dan Martinez  <dfm@razorwind.org>

	* io.c (Init_IO): [DOC] define dummy ARGF instead of ARGF.class to
	  re-enable the generation of ARGF documentation.  [Fix GH-1358]

Sat May 21 11:07:29 2016  0x01f7  <souk.0x01f7@gmail.com>

	* doc/syntax/methods.rdoc (Method Names): add proper closing tag.
	  [Fix GH-1356]

Sat May 21 09:26:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_CHECK_SETJMP): fix missing macro definition
	  for the configured result.  fix up r55021.

Sat May 21 00:36:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_execarg_commandline): build command line string
	  from argument vector in rb_execarg.
	  [ruby-core:75611] [Bug #12398]

Fri May 20 23:25:42 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl.c (ossl_pem_passwd_value): Added. Convert the
	  argument to String with StringValue() and validate the length is in
	  4..PEM_BUFSIZE. PEM_BUFSIZE is a macro defined in OpenSSL headers.
	  (ossl_pem_passwd_cb): When reading/writing encrypted PEM format, we
	  used to pass the password to PEM_def_callback() directly but it was
	  problematic. It is not NUL character safe. And surprisingly, it